# rdkafka-api

./: .gitignore  CHANGELOG.md  cabal.project  rdkafka-api.cabal
cbits/: HaskellRdkafka.c
examples/: consume-to-stdout-high-level.hs  produce-from-stdin-high-level.hs  produce-from-stdin.hs
src/: Rdkafka.hs
src/Rdkafka/: Client.hs  Types.hs
src/Rdkafka/Client/: Configuration.hs  Consumer.hs  Producer.hs  Types.hs
src/Rdkafka/Constant/: ConfigurationResult.hsc  EventType.hsc  Partition.hsc  ResponseError.hsc  Type.hsc
src/Rdkafka/Struct/: Message.hsc  TopicPartition.hsc  TopicPartitionList.hsc  ValueUnion.hsc
